:recycle: 버디 매칭 후 모든 상대 정보 반환 stream toList에서 불변 리스트 반환으로 리팩토링